kuber-config/kuber.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-custom
  labels:
    app: java-custom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-custom
  template:
    metadata:
      labels:
        app: java-custom
    spec:
      containers:
      - name: java-custom
        image: alinourollahi/java-custom
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: java-custom-svc
spec:
  selector:
    app: java-custom
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: apps/v1                                                                                                                                                                                        
kind: Deployment                                                                                                                                                                                           
metadata:                                                                                                                                                                                                  
  name: nodejs-custom                                                                                                                                                                                      
  labels:                                                                                                                                                                                                  
    app: nodejs-custom                                                                                                                                                                                     
spec:                                                                                                                                                                                                      
  replicas: 1                                                                                                                                                                                              
  selector:                                                                                                                                                                                                
    matchLabels:                                                                                                                                                                                           
      app: nodejs-custom                                                                                                                                                                                   
  template:                                                                                                                                                                                                
    metadata:                                                                                                                                                                                              
      labels:                                                                                                                                                                                              
        app: nodejs-custom                                                                                                                                                                                 
    spec:                                                                                                                                                                                                  
      containers:                                                                                                                                                                                          
      - name: nodejs-custom                                                                                                                                                                                
        image: alinourollahi/nodejs-custom                                                                                                                                                                 
        ports:                                                                                                                                                                                             
        - containerPort: 3001                                                                                                                                                                              
                                                                                                                                                                                                           
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-custom-svc
spec:
  selector:
    app: nodejs-custom
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
