kuber-config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress  
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: '*.cloudproject.com'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-custom-svc
            port:
              number: 80
